--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@ngrx/effects": "^8.5.2",
     "@ngrx/store": "^8.5.2",
+    "@ngrx/store-devtools": "^8.5.2",
+    "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
