--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/router-store": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
+    "jasmine-marbles": "^0.6.0",
     "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
